<resources>
    <string name="app_name">Green Smart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_weather">Thời tiết</string>
    <string name="menu_list_agricultural">Danh sách nông sản</string>
    <string name="menu_notifications">Thông báo</string>
    <string name="menu_about">Thông tin</string>
    <string name="settings">Cài đặt</string>
    <string name="about">Thông tin</string>
    <string name="title_agp_add_attributes">Đặc tính</string>
    <string name="title_agp_add">Thêm nông sản</string>
    <string name="title_nav_weather">Thời tiết</string>
    <string name="title_nav_agp">Danh sách nông sản</string>
    <string name="title_nav_notifications">Thông báo</string>
    <string name="switch_agp_add_detect_rain">Phát hiện mưa</string>
    <string name="switch_agp_add_detect_drying">Đang phơi</string>
    <string name="txt_agp_add_detect_humidity">Độ ẩm (%)</string>
    <string name="txt_agp_add_detect_temperature">Nhiệt độ (°C)</string>
    <string name="title_agp_add_info">Thông tin</string>
    <string name="btn_agp_add_image">Thay đổi</string>
    <string name="btn_agp_add">Thêm mới</string>
    <string name="app_slogan">Màu xanh của công nghệ</string>

    <string name="item_agp_temperature">Nhiệt độ: %1$s-%2$s °C</string>
    <string name="item_agp_humidity">Độ ẩm: %1$s-%2$s</string>
    <string name="item_agp_temperature_forecast">Nhiệt độ: %1$s °C</string>
    <string name="item_agp_humidity_forecast">Độ ẩm: %1$s</string>
    <string name="item_agp_detect_rain">Phát hiện mưa</string>
    <string name="item_agp_no_detect_rain">Không phát hiện mưa</string>
    <string name="item_agp_drying">Đang phơi</string>
    <string name="item_agp_no_drying">Không phơi</string>
    <string name="item_agp_notification">✓ THÔNG BÁO</string>
    <string name="menu_item_agp_view_forecast">Xem dự báo thời tiết</string>
    <string name="switch_agp_add_notification">Thông báo</string>
    <string name="about_title">Thông tin</string>
    <string name="about_apps_version">Phiên bản ứng dụng 1.0.1</string>
    <string name="about_copy_right">Copyright © 2018 G0714CLC \n All rights reserved.</string>
    <string name="message_add_agp_success">Thêm nông sản mới thành công!</string>
    <string name="message_add_agp_fail">Thêm nông sản mới thất bại!</string>
    <string name="message_add_agp">Đang gửi dữ liệu...</string>
    <string name="message_send_request">Đang gửi dữ liệu...</string>
    <string name="btn_agp_update_delete">Xóa bỏ</string>
    <string name="btn_agp_update">Cập nhật</string>
    <string name="title_agp_update">Cập nhật nông sản</string>

    <string name="settings_title_general">Chung</string>
    <string name="settings_title_about">Thông tin</string>
    <string name="settings_title_version">Phiên bản ứng dụng</string>
    <string name="settings_summary_version">1.0.1</string>
    <string name="settings_title_open_source">Giấy phép mã nguồn mở</string>
    <string name="settings_summary_open_source">Danh sách mã nguồn mở sử dụng trong ứng dụng</string>
    <string name="settings_title_notification">Thông báo</string>
    <string name="settings_summary_notification">Bật thông báo</string>
    <string name="settings_title_developers">Nhà phát triển</string>
    <string name="settings_summary_developers">© 2018 G0714CLC. All rights reserved.</string>
    <string name="settings_summary_location">Kinh độ: %1$s \nVĩ độ: %2$s</string>
    <string name="title_activity_settings">Cài đặt</string>
    <string name="menu_item_agp_delete">Xóa bỏ</string>
    <string name="title_notification">Thông báo</string>
    <string name="message_delete_agp">Bạn chắc chắn muốn xóa nông sản này?</string>
    <string name="btn_no">Không</string>
    <string name="btn_cancel">Hủy bỏ</string>
    <string name="btn_yes">Có</string>
    <string name="settings_title_server">Thông tin máy chủ</string>
    <string name="settings_summary_server">Cấu hình địa chỉ máy chủ</string>
    <string name="txt_title_current_weather_real_time">Cảm biến</string>
    <string name="settings_title_location">Vị trí tọa độ</string>
    <string name="txt_title_current_weather_internet">Từ internet</string>
    <string name="message_notification_load_failed">Có lỗi trong quá trình tải thông báo!</string>
    <string name="title_agp_forecast">Dự báo thời tiết</string>
    <string name="network_no_conection">Không có kết nối mạng!</string>
    <string name="network_title_setting">Cài đặt</string>
    <string name="title_asc">Tăng dần</string>
    <string name="title_desc">Giảm dần</string>
    <string name="title_filter">Lọc danh sách</string>

</resources>
