<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_title_general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notification"
            android:summary="@string/settings_summary_notification"
            android:title="@string/settings_title_notification" />

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


        <EditTextPreference
            android:defaultValue="http://192.168.2.249:3000"
            android:dialogTitle="@string/settings_summary_server"
            android:key="server"
            android:summary="@string/settings_summary_server"
            android:title="@string/settings_title_server" />

        <Preference
            android:key="location"
            android:title="@string/settings_title_location" />


    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_title_about">

        <Preference
            android:summary="@string/settings_summary_version"
            android:title="@string/settings_title_version" />

        <Preference
            android:key="open_source_licenses"
            android:summary="@string/settings_summary_open_source"
            android:title="@string/settings_title_open_source" />

        <Preference
            android:summary="@string/settings_summary_developers"
            android:title="@string/settings_title_developers">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/nguyenvuhuy/greensmartclient" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
