<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_weather"
            android:icon="@drawable/ic_menu_weather"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_menu_list_agricultural"
            android:icon="@drawable/ic_menu_list_agricultural"
            android:title="@string/menu_list_agricultural" />
        <item
            android:id="@+id/nav_menu_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/menu_notifications" />
    </group>

    <item android:title="Ứng dụng">
        <menu>
            <item
                android:id="@+id/nav_menu_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_menu_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
