<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="6dp"
    android:paddingTop="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/title_filter"
        android:textSize="20sp"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/rad_group_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rad_filter_asc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_asc"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rad_filter_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_desc"
            android:textSize="16sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btn_filter_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorAccent"
            android:theme="@style/PrimaryFlatButton" />

        <Button
            android:id="@+id/btn_filter_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:textColor="@color/colorAccent"
            android:theme="@style/PrimaryFlatButton" />

    </LinearLayout>

</LinearLayout>